--- a/sample/index.html
+++ b/sample/index.html
@@ -15,13 +15,18 @@
 <h1>CKEditor 5 – super build</h1>
 
 <div id="classic-editor">
-    <h2>Sample</h2>
+    <h2>Classic</h2>
 
     <p>This is an instance of the <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/overview.html#classic-editor">classic editor build</a>.</p>
 </div>
 
+<br>
+<hr>
+<br>
+
+
 <div id="inline-editor">
-    <h2>Sample</h2>
+    <h2>Inline</h2>
 
     <p>This is an instance of the <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/overview.html#inline-editor">inline editor build</a>.</p>
 </div>
